--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -62,7 +62,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/teal_200"
-            android:text="Add" />
+            android:text="Login" />
 
 
 
