--- a/app/src/main/res/layout/read_adapter.xml
+++ b/app/src/main/res/layout/read_adapter.xml
@@ -1,57 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="ID: 1"
-           android:textColor="@color/black"
-           android:textSize="20sp"
-           android:id="@+id/txtId"/>
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="name:Paraceetamol"
-           android:textColor="@color/black"
-           android:textSize="20sp"
-           android:id="@+id/txtName"/>
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="rate:30"
-           android:textColor="@color/black"
-           android:textSize="20sp"
-           android:id="@+id/txtRate"/>
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="pack:30"
-           android:textColor="@color/black"
-           android:textSize="20sp"
-           android:id="@+id/txtPack"/>
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="Discount:10"
-           android:textColor="@color/black"
-           android:textSize="20sp"
-           android:id="@+id/txtDiscount"/>
-       <TextView
-           android:text="type:health"
-           android:textColor="@color/black"
-           android:textSize="20sp"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:id="@+id/txtType"/>
-   </LinearLayout>
+        <TextView
+            android:id="@+id/txtId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ID: 1"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="name:Paraceetamol"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtRate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="rate:30"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtPack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="pack:30"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtDiscount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Discount:10"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="type:health"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:weightSum="2">
+
+            <Button
+                android:id="@+id/updateBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTint="@color/teal_200"
+                android:text="Update"
+                android:layout_margin="10dp"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/deleteBtn"
+                android:layout_margin="10dp"
+
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTint="@color/teal_200"
+                android:text="Delete"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
+    </LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
