--- a/app/src/main/res/layout/update_layout_dialog.xml
+++ b/app/src/main/res/layout/update_layout_dialog.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="350dp"
     android:layout_height="match_parent"
-    tools:context=".activities.ForAdmin">
-
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/DataLayout"
@@ -148,54 +145,16 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/btnRelative"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/updateBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/DataLayout">
-
-        <Button
-            android:id="@+id/addBtn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/teal_200"
-            android:text="Add" />
-
-        <Button
-            android:id="@+id/updateBtn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/addBtn"
-            android:backgroundTint="@color/teal_200"
-            android:text="Update" />
-
-        <Button
-            android:id="@+id/readBtn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/addBtn"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/teal_200"
-            android:text="Read" />
-
-        <Button
-            android:id="@+id/deleteBtn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/addBtn"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/addBtn"
-            android:backgroundTint="@color/teal_200"
-            android:text="Delete" />
-
-
-    </RelativeLayout>
-
+        android:text="Update"
+        android:textAllCaps="false"
+        android:backgroundTint="@color/teal_200"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/DataLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
